# Archived_Repos

Anchor/: Anchor.csproj  Anchor.sln  Program.cs  Shader.cs  Window.cs
AssemblyProjects/: README.md
Badlands/: Badlands.sln
CustomNeuralNet/: CustomNeuralNet.csproj  Network.cs  Program.cs  README.md
DriftAway/: README.md
Electron_Project/: README.md  index.html  main.js  package-lock.json  package.json  style.css
Foreman/: Foreman.sln
Grit/: Grit.sln  LICENSE.md  README.md  gitignore.txt
Hard Target/: Hard Target.sln
Hawking/: Hawking.sln
LangGames/: Notes.txt
Menu/: Drinks Menu.md
Montbre/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Montbre.sln  NavMeshComponents.csproj  NavMeshComponentsEditor.csproj
OpenTKGame/: GameWorkspace.code-workspace  Notes.txt  README.md
Suspect/: Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  FizzySteamworks.csproj  Mirror.Authenticators.csproj  Mirror.CompilerSymbols.csproj  Mirror.Components.csproj  Mirror.Editor.csproj  Mirror.Transports.csproj  Mirror.csproj  SimpleWebTransport.csproj  SteamAudioUnity.csproj  SteamAudioUnityEditor.csproj  Suspect.sln  Telepathy.csproj  Unity.Mirror.CodeGen.csproj  kcp2k.csproj
TexturesToUnity/: README.md
The Amazing Mail Game/: Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  kcp2k.csproj  (+15 more)
example/: Cargo.toml
example/src/: main.rs
guessru/: Cargo.toml  README.md  forgor.txt  index.html  tailwind.config.js
guessru/src/: main.rs
guessru/static/: en.txt  ru.txt
zero/: Cargo.toml
zero/src/: main.rs
(+529 files in other folders)
