[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serenity ={ version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] } 
openai = "1.0.0-alpha.8"
