[package]
name = "guessru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }

rand = { version = "0.8.5"}
wasm-bindgen = "0.2.84"

getrandom = { version = "0.2", features = ["js"] }
web-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
